--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -5,8 +5,16 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   font-family: "Playfair Display", serif;
+
+  @media screen and (min-width: 600px) {
+    .weathr {
+      font-size: 14px;
+      width: auto;
+      padding-left: 2px;
+    }
+  }
   .app {
-    height: 95vh;
+    min-height: 95vh;
   }
   .icon {
     margin-top: 20px;
